deploy: c64d32ff06b400ec0bb960fda1a0ff5f740b58ad

--- a/spain-2025-itinerary.html
+++ b/spain-2025-itinerary.html
@@ -377,8 +377,6 @@ Exit the station and turn right onto Rúa Calvo Sotelo, pass the café by the co
 </li>
 <li>Dr.&nbsp;Bronner’s Organic Liquid Soap – 2 oz (body + laundry)<br>
 </li>
-<li>Optional: Laundry detergent sheets (½ sheet per sink load, fresher smell, easier rinsing)<br>
-</li>
 <li>Travel deodorant<br>
 </li>
 <li>Razor + small shaving cream<br>
@@ -392,7 +390,6 @@ Exit the station and turn right onto Rúa Calvo Sotelo, pass the café by the co
 <li>Nail clippers<br>
 </li>
 <li>Disposable contacts as glasses backup</li>
-<li>Optional: Small travel shampoo or shampoo bar (can skip or buy in Spain)</li>
 </ul>
 </section>
 <section id="health-first-aid" class="level3">
@@ -400,10 +397,8 @@ Exit the station and turn right onto Rúa Calvo Sotelo, pass the café by the co
 <ul>
 <li>Walgreens blister pads (Compeed-style hydrocolloid)<br>
 </li>
-<li>Ibuprofen<br>
-</li>
-<li>Hand sanitizer + tissues<br>
-</li>
+<li>Ibuprofen / acetaminophen / citalopram / ambien</li>
+<li>Hand sanitizer</li>
 <li>Earplugs + eye mask (for noisy albergues)<br>
 </li>
 <li>Disposable contact lenses (a few as backup)</li>
@@ -416,8 +411,6 @@ Exit the station and turn right onto Rúa Calvo Sotelo, pass the café by the co
 </li>
 <li>EU Plug adapter</li>
 <li>AirPods</li>
-<li>Apple Watch + charger<br>
-</li>
 <li>13″ MacBook Air (with power bank/cord)</li>
 </ul>
 </section>
@@ -427,7 +420,7 @@ Exit the station and turn right onto Rúa Calvo Sotelo, pass the café by the co
 <li>Sunglasses<br>
 </li>
 <li>Hat</li>
-<li>Safety pins or clothesline for drying (<strong>TBD</strong>)</li>
+<li>Clothesline for drying</li>
 <li>Sleep sack / liner (for albergues)<br>
 </li>
 <li>2 × 1 L bottles (Smartwater style — bring 1 from home, buy 1 in Spain)</li>
@@ -438,7 +431,6 @@ Exit the station and turn right onto Rúa Calvo Sotelo, pass the café by the co
 <section id="notes-next-steps" class="level2">
 <h2 class="anchored" data-anchor-id="notes-next-steps">Notes &amp; Next Steps</h2>
 <ul>
-<li>pack backpack</li>
 <li>Book Madrid (Oct 6–7) hotel.</li>
 <li>Decide 2 vs.&nbsp;3 nights in Santiago +/- daytrip to Finisterre or other vs.&nbsp;Overnight in Finisterre</li>
 </ul>
@@ -465,14 +457,7 @@ Exit the station and turn right onto Rúa Calvo Sotelo, pass the café by the co
 <ul>
 <li><strong>MKG → ORD (Denver Air Connection KG 5760)</strong> — Booking reference: AAZXSG<br>
 </li>
-<li><strong>ORD → MKG (Denver Air Connection KG 5775)</strong> — Booking reference: AAZXSG<br>
-</li>
-</ul></li>
-<li><strong>Airline contact &amp; apps</strong>
-<ul>
-<li>Iberia: manage via Iberia app / iberia.com (booking &amp; mobile boarding passes).<br>
-</li>
-<li>Denver Air Connection: iflysouthern.com – manage booking / contact via website.</li>
+<li><strong>ORD → MKG (Denver Air Connection KG 5775)</strong> — Booking reference: AAZXSG</li>
 </ul></li>
 </ul>
 </section>
