deploy: f8327ec57811ef7d3a75100f81bc410ae6411ee1

--- a/spain-2025-itinerary.html
+++ b/spain-2025-itinerary.html
@@ -175,15 +175,9 @@ ul.task-list li input[type="checkbox"] {
 <li><strong>10:00 am</strong> — Drop <strong>Gus</strong> at daycare. Drive time from daycare to MKG is ~40 minutes.</li>
 <li><strong>10:50 am</strong> — Arrive at <strong>Muskegon (MKG)</strong> for check-in/security for <strong>KG 5760</strong> (12:05 pm departure).</li>
 </ul></li>
-<li>Muskegon → Chicago (KG 5760, dep 12:05 pm, arr 11:55 am)
-<ul>
-<li><em>Denver Air Connection Booking Reference: AAZXSG</em></li>
-</ul></li>
+<li>Muskegon → Chicago (KG 5760, dep 12:05 pm, arr 11:55 am)</li>
 <li>American Airlines Flagship Lounge in T3 near Gate K19</li>
-<li>Chicago ORD → Madrid (Iberia IB 342, dep 4:30 pm, arr Sept 29 7:55 am)
-<ul>
-<li><em>Iberia Booking Reference: ETKT494 2300390565/01-02</em></li>
-</ul></li>
+<li>Chicago ORD → Madrid (Iberia IB 342, dep 4:30 pm, arr Sept 29 7:55 am)</li>
 </ul>
 </section>
 <section id="day-2-mon-sept-29" class="level3">
