deploy: 636a2d1adef8201bc884de7f1f0a1d638b4e2914

--- a/spain-2025-itinerary.html
+++ b/spain-2025-itinerary.html
@@ -170,13 +170,10 @@ ul.task-list li input[type="checkbox"] {
 <section id="day-1-sun-sept-28" class="level3">
 <h3 class="anchored" data-anchor-id="day-1-sun-sept-28">Day 1 – Sun Sept 28</h3>
 <ul>
-<li><strong>Timing for departure day (Sun Sept 28):</strong>
+<li>Muskegon → Chicago (KG 5760, dep 12:05 pm, arr 11:55 am)
 <ul>
-<li><strong>10:00 am</strong> — Drop <strong>Gus</strong> at daycare. Drive time from daycare to MKG is ~40 minutes.</li>
-<li><strong>10:50 am</strong> — Arrive at <strong>Muskegon (MKG)</strong> for check-in/security for <strong>KG 5760</strong> (12:05 pm departure).</li>
-</ul></li>
-<li>Muskegon → Chicago (KG 5760, dep 12:05 pm, arr 11:55 am)</li>
 <li>American Airlines Flagship Lounge in T3 near Gate K19</li>
+</ul></li>
 <li>Chicago ORD → Madrid (Iberia IB 342, dep 4:30 pm, arr Sept 29 7:55 am)</li>
 </ul>
 </section>
@@ -283,7 +280,7 @@ Exit the station and turn right onto Rúa Calvo Sotelo, pass the café by the co
 </li>
 <li>Evening walk to Cabo Fisterra lighthouse for sunset at the “end of the world.”<br>
 </li>
-<li>Overnight: <strong>Finisterre (book in Santiago if weather/energy permit) OR third night in Santiago</strong> — decision to be made after arrival. .</li>
+<li>Overnight: <strong>Finisterre (book in Santiago if weather/energy permit) OR third night in Santiago</strong> — decision to be made after arrival.</li>
 </ul>
 </section>
 <section id="day-10-tue-oct-7" class="level3">
@@ -299,13 +296,26 @@ Exit the station and turn right onto Rúa Calvo Sotelo, pass the café by the co
 </li>
 <li>Evening tapas crawl in La Latina or Malasaña.<br>
 </li>
-<li>Overnight: Madrid <strong>hotel TBD — recommended Sol/Gran Vía/La Latina area</strong>.</li>
+<li>Overnight: <strong>Petit Palace Plaza Mayor</strong></li>
 </ul>
 </section>
 <section id="day-11-wed-oct-8" class="level3">
 <h3 class="anchored" data-anchor-id="day-11-wed-oct-8">Day 11 – Wed Oct 8</h3>
 <ul>
-<li><strong>08:30 am</strong> — Arrive at Madrid Barajas T4 (recommended 3 hrs before departure, take Cercanías train from central Madrid).</li>
+<li><strong>08:30 am</strong> — Arrive at Madrid Barajas T4 (recommended 3 hrs before departure, take Cercanías train from central Madrid).<br>
+</li>
+<li>From Petit Palace Plaza Mayor:
+<ul>
+<li>Walk ~5 min to Sol station.<br>
+</li>
+<li>Take Cercanías C3 or C4 northbound to Chamartín (~10 min).<br>
+</li>
+<li>At Chamartín, transfer to Cercanías C1 or C10 directly to Barajas T4 (~15–20 min).<br>
+</li>
+<li>Total travel time ~40 min including transfer. Trains run every 15–20 min.<br>
+</li>
+<li>Alternative: Taxi/Uber directly to T4 (~25–35 min, €30–35 flat rate).</li>
+</ul></li>
 <li>Madrid → Chicago ORD (Iberia IB 341, dep 11:35 am, arr 2:15 pm)<br>
 </li>
 <li>Chicago → Muskegon (KG 5775, dep 6:00 pm, arr 7:50 pm)</li>
@@ -322,6 +332,8 @@ Exit the station and turn right onto Rúa Calvo Sotelo, pass the café by the co
 <li>Flight &amp; train tickets (digital copies on phone + 1 printed copy as backup)<br>
 </li>
 <li>Credit + ATM cards</li>
+<li>Euro cash</li>
+<li>Priority Health card</li>
 </ul>
 </section>
 <section id="pack-setup" class="level3">
@@ -381,9 +393,7 @@ Exit the station and turn right onto Rúa Calvo Sotelo, pass the café by the co
 </li>
 <li>Lip balm with SPF<br>
 </li>
-<li>Nail clippers<br>
-</li>
-<li>Disposable contacts as glasses backup</li>
+<li>Nail clippers</li>
 </ul>
 </section>
 <section id="health-first-aid" class="level3">
@@ -393,15 +403,16 @@ Exit the station and turn right onto Rúa Calvo Sotelo, pass the café by the co
 </li>
 <li>Ibuprofen / acetaminophen / citalopram / ambien</li>
 <li>Hand sanitizer</li>
+<li>tissue</li>
 <li>Earplugs + eye mask (for noisy albergues)<br>
 </li>
-<li>Disposable contact lenses (a few as backup)</li>
+<li>Disposable contact lenses (a few as glasses backup)</li>
 </ul>
 </section>
 <section id="electronics" class="level3">
 <h3 class="anchored" data-anchor-id="electronics">Electronics</h3>
 <ul>
-<li>Phone + USB-C cord<br>
+<li>iPhone + USB-C cord<br>
 </li>
 <li>EU Plug adapter</li>
 <li>AirPods</li>
@@ -417,7 +428,10 @@ Exit the station and turn right onto Rúa Calvo Sotelo, pass the café by the co
 <li>Clothesline for drying</li>
 <li>Sleep sack / liner (for albergues)<br>
 </li>
-<li>2 × 1 L bottles (Smartwater style — bring 1 from home, buy 1 in Spain)</li>
+<li>Nite Ize gear tie 6” x 2</li>
+<li>2 × 1 L bottles (Smartwater style — bring 1 from home, buy 1 in Spain)<br>
+</li>
+<li>pen</li>
 </ul>
 <hr>
 </section>
@@ -425,7 +439,6 @@ Exit the station and turn right onto Rúa Calvo Sotelo, pass the café by the co
 <section id="notes-next-steps" class="level2">
 <h2 class="anchored" data-anchor-id="notes-next-steps">Notes &amp; Next Steps</h2>
 <ul>
-<li>Book Madrid (Oct 6–7) hotel.</li>
 <li>Decide 2 vs.&nbsp;3 nights in Santiago +/- daytrip to Finisterre or other vs.&nbsp;Overnight in Finisterre</li>
 </ul>
 <hr>
@@ -438,8 +451,6 @@ Exit the station and turn right onto Rúa Calvo Sotelo, pass the café by the co
 <li><strong>Sep 28 — ORD → MAD (Iberia IB 342)</strong>
 <ul>
 <li>Booking reference / ticket: ETKT494 2300390565/01-02 (from confirmation)<br>
-</li>
-<li>Check lounge: AA Flagship Lounge T3 near Gate K19<br>
 </li>
 </ul></li>
 <li><strong>Oct 8 — MAD → ORD (Iberia IB 341)</strong>
@@ -531,6 +542,16 @@ Exit the station and turn right onto Rúa Calvo Sotelo, pass the café by the co
 <li>Reservation: <strong>#6216069981</strong> (via Booking.com)<br>
 </li>
 <li><strong>Check-in / key pickup:</strong> Hotel Rúa Villar, Rúa do Vilar 8–10 (24h reception); Phone: +34 981 519 858</li>
+</ul></li>
+<li><strong>Oct 7 — Madrid: Petit Palace Plaza Mayor</strong>
+<ul>
+<li>Address: C/ Mayor 46, 28013 Madrid, Spain<br>
+</li>
+<li>Phone: +34 915 42 69 99<br>
+</li>
+<li>Booking reference: H-867N8NVNLG3T (Capital One Travel, Confirmation 102-19517563)<br>
+</li>
+<li>Reservation: Check-in Oct 7 at 2:00 p.m., checkout Oct 8 at 12:00 p.m.</li>
 </ul></li>
 </ul>
 
