deploy: 9f7e15697c2eccfc6e5ee3e022c1fdd442b821fd

--- a/spain-2025-itinerary.html
+++ b/spain-2025-itinerary.html
@@ -234,13 +234,6 @@ The travel into Galicia was a bit of an adventure. My flight into Madrid was del
 </div>
 </div></li>
 </ul>
-<div class="quarto-layout-panel" data-layout-ncol="2">
-<div class="quarto-layout-row">
-<div class="quarto-layout-cell" style="flex-basis: 50.0%;justify-content: flex-start;">
-<p><img src="images/sep29-lounge.jpeg" class="img-fluid" data-fig-cap="ORD lounge fuel-up" alt="Plate of food with cava in airport lounge"> <img src="images/sep29-train.jpeg" class="img-fluid" data-fig-cap="Chamartín station" alt="Crowds boarding trains in Madrid"></p>
-</div>
-</div>
-</div>
 </section>
 <section id="days-37-sept-30-to-oct-4-camino-francés-last-115-km" class="level3">
 <h3 class="anchored" data-anchor-id="days-37-sept-30-to-oct-4-camino-francés-last-115-km">Days 3–7 – Sept 30 to Oct 4 (Camino Francés – last 115 km)</h3>
@@ -440,7 +433,7 @@ First walking day on the Camino: Sarria to Portomarín, about 22 km. We set out 
 </li>
 <li>Ibuprofen / acetaminophen / citalopram / ambien</li>
 <li>Hand sanitizer</li>
-<li>tissue</li>
+<li>Tissues</li>
 <li>Earplugs + eye mask (for noisy albergues)<br>
 </li>
 <li>Disposable contact lenses (a few as glasses backup)</li>
