deploy: 77f10aa8a668dd55e2aff269e6d07981e19c0d94

--- a/spain-2025-itinerary.html
+++ b/spain-2025-itinerary.html
@@ -181,33 +181,14 @@ ul.task-list li input[type="checkbox"] {
 <ul>
 <li>07:55 — Arrive Madrid Barajas T4.<br>
 </li>
-<li>08:50–09:10 — Transfer to Chamartín (Cercanías train):
-<ul>
-<li>Follow signs for <strong>Cercanías / Renfe</strong> at T4.<br>
+<li>08:50–09:10 — Transfer to Chamartín (Cercanías train):</li>
+<li>10:04 — Depart Chamartín (AVE 05273, Confort, seat 05B)</li>
+<li>12:18 — Arrive Ourense.<br>
 </li>
-<li>Go down to the Cercanías station located beneath T4.</li>
-<li>Use your Renfe ticket’s “Combinado Cercanías” code to get a free Cercanías ticket from the red/white Renfe ticket machines.</li>
-<li>Select <strong>Chamartín</strong> as your destination.</li>
-<li>Take line <strong>C1 or C10</strong> (~20 min, trains every 15–20 min).<br>
-</li>
-</ul></li>
-<li>~09:30 — Arrive Chamartín, coffee/snack.<br>
-</li>
-<li>10:04 — Depart Chamartín (AVE 05273, Confort, seat 05B) Booking Reference: MLVGKH-3EFcRFjV<br>
-</li>
-<li>12:18 — Arrive Ourense.
-<ul>
-<li>Follow signs to the connecting MD (Media Distancia) platform.</li>
-<li>The transfer window is short (~14 minutes), so move directly from arrival platform to the regional train platform.</li>
-</ul></li>
 <li>12:32 — Depart Ourense (MD 12694)<br>
 </li>
-<li>13:47 — Arrive Sarria
-<ul>
-<li>Walk from the train station to <strong>Albergue O Durmiñento</strong> (~1 km / 10–12 minutes):<br>
-Exit the station and turn right onto Rúa Calvo Sotelo, pass the café by the corner, continue straight toward the old town, then turn left onto Rúa Maior. Follow Rúa Maior past the church of Santa Mariña; the albergue is further along at no. 48.<br>
+<li>13:47 — Arrive Sarria<br>
 </li>
-</ul></li>
 <li>Check-in: <strong>Albergue O Durmiñento</strong>.<br>
 </li>
 <li>Afternoon: explore old town.
@@ -270,7 +251,7 @@ First walking day on the Camino: Sarria to Portomarín, about 22 km. We set out 
 <li>Often stop in Melide, famous for pulpo a la gallega (octopus) and the Romanesque church at Leboreiro.<br>
 </li>
 <li>Arzúa is known for its cheese production and nearby Ribadiso hosts a medieval pilgrim hospital.</li>
-<li>Overnight: <strong>Cruce de Caminos Arzúa</strong> — refundable, backup if not staying at Ribadiso</li>
+<li>Overnight: <strong>Cruce de Caminos Arzúa</strong></li>
 </ul></li>
 <li><strong>Day 6 (Oct 3):</strong> Arzúa → O Pedrouzo (~19 km)
 <ul>
