deploy: 5fb385581c80448a6361eb322f9d5786df928df0

--- a/spain-2025-itinerary.html
+++ b/spain-2025-itinerary.html
@@ -199,6 +199,7 @@ ul.task-list li input[type="checkbox"] {
 <li>Evening: pilgrim dinner.
 <ul>
 <li>Recommended to join a lively spot such as Mesón O Tapas do Peregrino or O Descanso for the set pilgrim menu (starter, main, dessert, wine/water). These places are popular with walkers and a good way to meet fellow pilgrims before starting the Camino.</li>
+</ul></li>
 </ul>
 <div class="callout callout-style-default callout-note callout-titled">
 <div class="callout-header d-flex align-content-center">
@@ -213,8 +214,7 @@ Note
 <p><strong>Daily Summary — Sept 29</strong><br>
 The travel into Galicia was a bit of an adventure. My flight into Madrid was delayed, which made me miss my original train. I caught a later one, but even that got interrupted because wildfires had closed part of the tracks, so we all had to switch to a bus for the last stretch. By the time I finally made it to Sarria about 9:30 pm, I was ready to settle in. I checked into my hostel and had a pilgrim dinner with a new friend from Salamanca who arrived around the same time. The meal was classic Galician: caldo gallego, Estrella beer, and roasted pork. Galicia is famous for its rain, but so far the weather has been unexpectedly kind. I also got my pilgrim credential and my very first stamp—fittingly, at the restaurant where I ate dinner.</p>
 </div>
-</div></li>
-</ul>
+</div>
 </section>
 <section id="days-37-sept-30-to-oct-4-camino-francés-last-115-km" class="level3">
 <h3 class="anchored" data-anchor-id="days-37-sept-30-to-oct-4-camino-francés-last-115-km">Days 3–7 – Sept 30 to Oct 4 (Camino Francés – last 115 km)</h3>
