deploy: e43915c353c48ae6df0a14c288f2fe8f6481e887

--- a/spain-2025-itinerary.html
+++ b/spain-2025-itinerary.html
@@ -246,6 +246,25 @@ First walking day on the Camino: Sarria to Portomarín, about 22 km. We set out 
 <li>Pass historic pilgrim hospices at Hospital de la Cruz and end in Palas de Rei, whose Church of San Tirso preserves remarkable medieval carvings.</li>
 <li>Overnight: <strong>Albergue San Marcos</strong></li>
 </ul></li>
+</ul>
+<div class="callout callout-style-default callout-note callout-titled">
+<div class="callout-header d-flex align-content-center">
+<div class="callout-icon-container">
+<i class="callout-icon"></i>
+</div>
+<div class="callout-title-container flex-fill">
+Note
+</div>
+</div>
+<div class="callout-body-container callout-body">
+<p><strong>Daily Summary — Oct 1</strong><br>
+Dinner in Portomarín last night was Galician pork on a small patio at sunset with Gabriel and Guillermo. They left earlier than I did this morning since they didn’t have reservations and needed to find open albergues. I was still up before 7:00 because the dorm room was noisy with snoring and people rustling to leave. I took a wrong turn heading out of Portomarín in the dark but corrected quickly and continued the climb out of town.</p>
+<p>I stopped at a café for tortilla francesa with cheese (an omelet on bread), a café con leche, and fresh orange juice, which is excellent here. Later in the morning the fog lifted, and the day turned sunny with clear skies.</p>
+<p>The Camino passed farms with cows, small villages of stone houses, and stretches of countryside with pine trees, rolling hills, and fields. At one crossroads I met Paul, an older man from Paris, who by coincidence I saw him again this afternoon staying at the same albergue in Palas de Rei.</p>
+<p>When I arrived in Palas, I tried pulpo a la gallega (octopus), another Galician specialty. It was good, though not something I’ll seek out at home. At the albergue I showered, washed my clothes in the sink, and took a short nap. I’ll likely take a short walk around town this evening, but I’m sore from the day’s walk.</p>
+</div>
+</div>
+<ul>
 <li><strong>Day 5 (Oct 2):</strong> Palas de Rei → Arzúa (~29 km)
 <ul>
 <li>Often stop in Melide, famous for pulpo a la gallega (octopus) and the Romanesque church at Leboreiro.<br>
